# valth-solutions-test-task

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
src/loc_by_name/api/v1/: __init__.py  handlers.py  schemas.py
src/loc_by_name/core/: asgi.py  settings.py  urls.py  wsgi.py
src/loc_by_name/logic/: apps.py  dto.py  models.py
src/loc_by_name/logic/migrations/: 0001_initial.py  0003_alter_country_flag_alt.py
src/loc_by_name/logic/services/: external.py  orm.py
src/location_finder/api/v1/: __init__.py  auth.py  handlers.py  schemas.py
src/location_finder/core/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
src/location_finder/logic/: apps.py  dto.py  models.py
src/location_finder/logic/migrations/: 0002_alter_country_options_and_more.py  0004_rename_last_accessed_country_last_accessed_date.py
src/location_finder/logic/services/: external.py  interfaces.py  orm.py
src/location_finder/logic/use_cases/: get_countries_by_name.py  get_popular_names.py
tests/api/: test_countries_by_name.py  test_names_and_countries.py  test_popular_names.py
tests/services/: test_external_services.py  test_services.py
